--- a/style.css
+++ b/style.css
@@ -1,10 +1,6 @@
-#ajax {background-color: black;
-    display: inline;
-    color: blueviolet;
-    border: 2px solid red
-}
 nav{
     background-color: gray;
     color: rgb(192, 136, 245);
     display: inline-block;
+    font-size: large;
 }
