--- a/style.css
+++ b/style.css
@@ -1,6 +1,115 @@
-nav{
-    background-color: gray;
-    color: rgb(192, 136, 245);
-    display: inline-block;
-    font-size: large;
+@import url('https://fonts.googleapis.com/css2?family=Righteous&family=Sarala:wght@400;700&display=swap');
+
+
+body{
+    background: linear-gradient(68.15deg, #2F2325 16.62%, #8E5D52 85.61%);
+}
+
+.cabecalho{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    padding: 20px;
+}
+
+.logo{
+    height: 100px;
+}
+
+.menu{
+    display: flex;
+    gap: 32px;
+}
+
+.itemMenu{
+    font-family: 'Sarala', sans-serif;
+    color: white;
+    font-weight: 400;
+    font-size: 18px;
+}
+
+.conteudo{
+    border-top: 0.4px solid #FFF2E7;
+    margin-bottom: 48px;
+}
+
+.conteudoContato{
+    border-top: 0.4px solid #FFF2E7;
+    padding-top: 20px;
+}
+
+.conteudoPrincipal{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.imagemLang{
+    border: 0.4px solid goldenrod;
+}
+
+.mainTitulo{
+    display: flex;
+    flex-direction: column;
+    gap: 0px;
+    margin-top: 20px;
+}
+
+.tituloPrincipal{
+    font-family: 'Righteous', cursive;
+    font-weight: 400px;
+    font-size: 64px;
+    color: #FFF2E7;
+}
+
+.titulosAula{
+    font-family: 'Righteous', cursive;
+    font-weight: 400px;
+    font-size: 40px;
+    color: #FFF2E7;
+}
+
+.conteudoTitulo{
+    font-family: 'Sarala', sans-serif;
+    font-weight: 400px;
+    font-size: 24px;
+    color: #ecd6c4;
+}
+
+.paragrafoImg{
+    font-family: 'Sarala', sans-serif;
+    font-weight: 400px;
+    font-size: 24px;
+    color: #ecd6c4;
+}
+
+footer{
+    font-family: 'Sarala', sans-serif;
+    font-weight: 400px;
+    font-size: 14px;
+    color: #ecd6c4;
+}
+
+.formulario{
+    font-family: 'Sarala', sans-serif;
+    font-weight: 400px;
+    font-size: 14px;
+    color: #ecd6c4;
+}
+
+.musicas{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    padding-top: 20px;
+}
+
+.conteudoMusicas{
+    font-family: 'Sarala', sans-serif;
+    font-weight: 400px;
+    font-size: 14px;
+    color: #ecd6c4;
 }
